# Duq330BigData

./: README.md  docstrings.py  pyproject.toml
DUQ330BIGDATA/: docstrings.py
DUQ330BIGDATA/Week 2/: read_data_exp.py
DUQ330BIGDATA/Week1/: docstrings.py
DUQ330BIGDATA/Week2/: read_data_exp.py
DUQ330BIGDATA/Week3/: reusable_classifier.py
DUQ330BIGDATA/Week4/: read_wine_data.py  wine_classifier.json  wine_classifier.py  wine_classifier_metadata.json
DUQ330BIGDATA/Week5/: distance_classifier.py  distances.py  fasttext.py  npi_grants_combine.py  npi_reader.py
DUQ330BIGDATA/Week6/: data_simulator.py  distance_classifier.json  distance_classifier_metadata.json  distance_features.py
DUQ330BIGDATA/Week7/: grant_doc_db.py  grant_doc_db_creation.py  grant_npi_bridge.py
scripts/: combine_npi_grants.py  predict_matches.py  train_distance_classifier.py  train_wine_classifier.py
