[tool.poetry]
name = "duq330bigdata"
version = "0.1.0"
description = ""
authors = ["jakem <mazurkiewiczj@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.0"
numpy = "^1.26.3"
datetime = "^5.4"
xgboost = "^2.0.3"
scikit-learn = "^1.4.0"
fasttext = {git = "https://github.com/cfculhane/fastText"}
jarowinkler = "^2.0.1"
sentence-transformers = "^2.5.1"
sqlalchemy = "^2.0.28"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
